# DeepGreen

./: .gitignore  README.md
Java/DL4J/: .gitignore
Java/DL4J/deepgreen-dl4j-aggregator/: .project  pom.xml
Java/DL4J/deepgreen-dl4j-bom/: .project  pom.xml
Java/DL4J/deepgreen-dl4j-core-module/: .project  (+1 more)
Java/deepgreen-dl4j/: .gitignore  .project  pom.xml  requirements.txt
Julia/: Manifest.toml  Project.toml  cifar.jl  test.jl  teston.jl
R/: notes.txt  resnet18_train.R  run.sh
R/emissions/: aggregate_resnet18_cifar100_png.csv  aggregate_resnet18_fashion_mnist_png.csv  aggregate_resnet18_tiny_imagenet_png.csv  aggregate_vgg16_cifar100_png.csv  aggregate_vgg16_fashion_mnist_png.csv  aggregate_vgg16_tiny_imagenet_png.csv  combined_aggregate.py  resnet18_cifar100_png_eval_epoch001.csv  resnet18_cifar100_png_train_epoch001.csv
R/models/: resnet18.r  vgg16.r
R/scripts/: energy_tracking.r  run_tracker.py  tracker_control.py  tracker_daemon.py
cpp/: .gitignore  CMakeLists.txt  requirements.txt
cpp/cmake_script/: DownloadAndConvertDataset.cmake  GenerateModel.cmake  InstallCodecarbon.cmake  RunPythonWithAutoInstall.cmake
cpp/emissions/: aggregate_resnet18_cifar100.csv  aggregate_resnet18_fashion.csv  aggregate_resnet18_tiny.csv  aggregate_vgg16_cifar100.csv  aggregate_vgg16_fashion.csv  aggregate_vgg16_tiny.csv  combined_aggregate.py  cpp_combined_data.csv  fix_model.py  rename.py  resnet18_cifar100_test.csv  resnet18_cifar100_train.csv  resnet18_fashion_test.csv  resnet18_fashion_train.csv  resnet18_tiny_test.csv  resnet18_tiny_train.csv  vgg16_cifar100_test.csv  vgg16_cifar100_train.csv  vgg16_fashion_test.csv  vgg16_fashion_train.csv  vgg16_tiny_test.csv  vgg16_tiny_train.csv
cpp/py_script/: resnet18.py  vgg16.py
cpp/py_script/models/: resnet18.py  vgg16.py
cpp/py_script/tracker/: import_codecarbon.py  tracker_control.py  win_patch_codecarbon.py
cpp/src/: CIFAR100.cpp  CIFAR100.h  cnn_function.h  cnn_setup.cpp  cnn_setup.h  dataset_transforms.cpp  dataset_transforms.h  time_to_sleep.cpp  train_cifar100.cpp  train_tiny.cpp  utils.cpp  utils.h
cpp/src/dataset/: CIFAR100.cpp  CIFAR100.h  CIFAR100Info.cpp  CIFAR100Info.h  DatasetInfo.h  FashionMNIST.cpp  FashionMNIST.h  FashionMNISTInfo.cpp  FashionMNISTInfo.h  ImageFolder.cpp  ImageFolder.h  InMemoryImageFolder.h  LazyImageFolder.h  TinyImageNet200.cpp  TinyImageNet200.h  TinyImageNet200Info.cpp  TinyImageNet200Info.h
cpp/src/model/: ResNet18.cpp  ResNet18.h  ResNet18_native.cpp  ResNet18_native.h  VGG16_native.cpp  VGG16_native.h  resnet18.cpp  resnet18.h  vgg16.cpp  vgg16.h
cpp/src/python/: PythonTracker.cpp  PythonTracker.h
cpp/src/train/: train_model.h
cpp/src/train/imported/: train_model.h
cpp/src/train/imported/resnet18/: train_cifar100.cpp  train_fashion.cpp  train_resnet18.h  train_tiny.cpp
cpp/src/train/imported/vgg16/: train_cifar100.cpp  train_fashion.cpp  train_tiny.cpp  train_vgg16.h
cpp/src/train/native/: train_model.h
cpp/src/train/native/resnet18/: train_cifar100.cpp  train_fashion.cpp  train_resnet18.h  train_tiny.cpp
cpp/src/train/native/vgg16/: train_cifar100.cpp  train_fashion.cpp  train_tiny.cpp  train_vgg16.h
cpp/src/train/resnet18/: train_cifar100.cpp  train_fashion.cpp  train_native.cpp  train_native.h  train_resnet18.h  train_tiny.cpp
cpp/src/train/vgg16/: train_cifar100.cpp  train_fashion.cpp  train_native.cpp  train_native.h  train_tiny.cpp  train_vgg16.h
data/: .gitignore  README.txt
dataloader/: download_convert_cifar100.py  download_convert_fashion.py  download_convert_tinyimage.py
matlab/: requirements.txt  run_scripts_on_unix.sh  run_scripts_on_windows.bat  settings_for_matlab.txt  setup_env.m
matlab/emissions/: aggregate_emissions.py  aggregate_resnet18_cifar100.csv  aggregate_resnet18_fashion.csv  aggregate_resnet18_tiny.csv  aggregate_vgg16_cifar100.csv  aggregate_vgg16_fashion.csv  aggregate_vgg16_tiny.csv  combined_aggregate.py  fix_model.py  matlab_combined_data.csv  rename.py  resnet18_cifar100_test.csv  resnet18_cifar100_train.csv  resnet18_fashion_test.csv  resnet18_fashion_train.csv  resnet18_tiny_test.csv  resnet18_tiny_train.csv  vgg16_cifar100_test.csv  vgg16_cifar100_train.csv  vgg16_fashion_test.csv  vgg16_fashion_train.csv  vgg16_tiny_test.csv  vgg16_tiny_train.csv
matlab/models/: model32.m  resnet18_model.m  resnet18_model_32_blank.m  vgg16_model.m  vgg16_model_32_blank.m
matlab/tracker/: tracker_control.py
matlab/train/: train_cifar100.m
matlab/utils/: load_data.m
python/jax/: jaxy.txt  run.sh  test.py
python/pytorch/: config.txt  download_cifar100.py  run.sh  vgg16.py
python/tensorflow/: OMG.txt  run.sh
requirements/: cpp.txt  java.txt  jax.txt  jax_env.yml  jax_raw.txt  matlab.txt  pytorch.txt  pytorch_env.yml  pytorch_raw.txt  r.txt  rust.txt  tensorflow.txt  tensorflow_env.yml  tensorflow_raw.txt
results/data/: R_combined_data.csv  all_combined_data.csv  combined_data.csv  cpp_combined_data.csv  final_comb.py  java_combined_data.csv  pytorch_combined_data.csv  rust_combined_data.csv
results/old_data/: all_combined_data.csv  final_comb.py  jax_combined_data.csv  pytorch_combined_data.csv  rust_combined_data.csv  tensorflow_combined_data.csv
results/scripts/: energy_vs_time.py  mega_analysis.py  pareto_frontier.py  plot_energy_stack.py  radar_plot.py  scatter_regression.py  tables.py
results/tables/: best_per_dataset.csv  best_per_dataset.md  efficiency_ranking.csv  efficiency_ranking.md  stats_per_language.csv  stats_per_language.md  train_vs_eval.csv  train_vs_eval.md
rust/: Cargo.toml  README.txt  run.sh
rust/emissions/: aggregate_resnet_cifar100.csv  aggregate_resnet_fashion.csv  aggregate_resnet_tinyimagenet.csv  aggregate_vgg_cifar100.csv  aggregate_vgg_fashion.csv  aggregate_vgg_tinyimagenet.csv  combined_aggregate.py  rust_combined_data.csv  vgg_cifar100_eval_epoch01.csv  vgg_cifar100_train_epoch01.csv  vgg_tinyimagenet_eval_epoch01.csv  vgg_tinyimagenet_train_epoch01.csv
rust/scripts/: run_tracker.py  tracker_control.py  tracker_daemon.py
rust/src/: emissions.rs  lib.rs  test.rs  train.rs
(+479 files in other folders)
